Fix footer alignment and color

--- a/details.html
+++ b/details.html
@@ -103,7 +103,7 @@
             </section>
         </main>
         <footer class="pt-5">
-            <ul class="decorated-nav nav justify-content-center text-sm-center mx-3">
+            <ul class="decorated-nav nav justify-content-center text-sm-center mx-1">
                 <li class="nav-item">
                   <a class="nav-link" href="#">Home</a>
                 </li>
@@ -135,7 +135,7 @@
                     <a class="nav-link" href="#">linkedin</a>
                 </li>
               </ul>
-              <div class="subscribe-section row py-5 my-3 px-5 flex-sm-column flex-lg-row align-items-center">
+              <div class="subscribe-section row py-5 my-3 px-5 flex-column flex-lg-row align-items-center justify-content-center">
                   <div class="col text-center">
                     <h4>subscribe</h4>
                     <form class="">
@@ -147,17 +147,17 @@
                   </div>
                   <div class="col text-center">
                     <h4>contact</h4>
-                    <p>Lorem ipsum</p>
+                    <p>Lorem ipsum dolor sit <a class="text-danger" href="#">error explicabo non.</a></p>
                   </div>
                   <div class="col text-center">
                     <h4>about</h4>
-                    <p>Lorem ipsum</p>
+                    <p>Lorem ipsum dolor, sit amet <a class="text-danger" href="#">error explicabo non.</a></p>
                   </div>
               </div>
               <nav class="footer-bottom text-grey">
                 <div class="container-fluid">
-                    <div class="d-flex  flex-sm-column flex-lg-row justify-content-between align-items-center p-2 text-secondary">
-                    <div class="">
+                    <div class="d-flex  flex-column flex-lg-row justify-content-between align-items-center p-2 text-secondary">
+                    <div class="social-icons p-2">
                         <i class="bi bi-facebook"></i>
                         <i class="bi bi-twitter"></i>
                         <i class="bi bi-telegram"></i>
@@ -165,11 +165,9 @@
                         <i class="bi bi-linkedin"></i>
                         <i class="bi bi-youtube"></i>
                     </div>
-                    <div class="">
-                        <p>
-                            Copyright &copy; TwoSteps. All rights reserved.
-                        </p>
-                    </div>
+                    <p class="copyright p-2 m-0">
+                        Copyright &copy; TwoSteps. All rights reserved.
+                    </p>
                     </div>
                 </div>
             </nav>
