Link all three  pages and add more search results

--- a/results.html
+++ b/results.html
@@ -13,7 +13,7 @@
     <div class="container-fluid px-0">
         <header class="d-flex flex-column flex-lg-row bg-danger align-items-center justify-content-between p-1">
             <h1 class="text-white text-sm-center text-lg-left">
-                <a class="text-white" href="#">
+                <a class="text-white" href="index.html">
                     <i class="bi bi-shop"></i> TwoSteps
                 </a>
             </h1>
@@ -45,7 +45,7 @@
             </nav>
         </header>
         <main>
-            <section class="filters-section bg-light mt-5 mb-2 p-5 shadow-sm">
+            <section class="filters-section bg-light mt-5 mb-5 p-5">
                 <div class="py-5">
                     <h2 class="d-none d-md-block text-center">Filter by name, category, country, state:</h2>
                 <p class="d-md-none text-center">Filter by name, category, country, state:</p>
@@ -91,8 +91,47 @@
             <section class="search-results bg-lght py-1">
                 <h2 class="d-none d-md-block p-2 text-center">Search result found 7 businesses:</h2>
                 <p class="d-md-none p-2 text-center">Search result found 7 businesses:</p>
-                <div class="business-list container">
+                <div class="business-list container" id="suggestions">
                     <div class="row">
+                        <div class="col-sm-12 col-md-6 col-lg-4">
+                            <div class="biz-card p-0 border m-2 rounded shadow">
+                                <img class="img-fluid w-100 rounded" src="img/hotel-almirante-cartagena-exterior.jpg" alt="sample-image">
+                                <div class="caption p-2">
+                                    <h5 class="m-0">Name</h5>
+                                    <p class="m-0">Location</p>
+                                    <p class="m-0">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, doloremque!</p>
+                                    <p class="text-center p-0 my-1">
+                                        <a href="details.html" class="text-primary">View more details</a>
+                                    </p>
+                                </div> <!-- End of biz-card -->
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-6 col-lg-4">
+                            <div class="biz-card p-0 border m-2 rounded shadow">
+                                <img class="img-fluid w-100 rounded" src="img/hotel-almirante-cartagena-exterior.jpg" alt="sample-image">
+                                <div class="caption p-2">
+                                    <h5 class="m-0">Name</h5>
+                                    <p class="m-0">Location</p>
+                                    <p class="m-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, mollitia?</p>
+                                    <p class="text-center p-0 my-1">
+                                        <a href="details.html" class="text-primary">View more details</a>
+                                    </p>
+                                </div> <!-- End of biz-card -->
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-6 col-lg-4">
+                            <div class="biz-card p-0 border m-2 rounded shadow">
+                                <img class="img-fluid w-100 rounded" src="img/hotel-almirante-cartagena-exterior.jpg" alt="sample-image">
+                                <div class="caption p-2">
+                                    <h5 class="m-0">Name</h5>
+                                    <p class="m-0">Location</p>
+                                    <p class="m-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, a?</p>
+                                    <p class="text-center p-0 my-1">
+                                        <a href="details.html" class="text-primary">View more details</a>
+                                    </p>
+                                </div> <!-- End of biz-card -->
+                            </div>
+                        </div>
                         <div class="col-sm-12 col-md-6 col-lg-4">
                             <div class="biz-card p-0 border m-2 rounded shadow">
                                 <img class="img-fluid w-100 rounded" src="img/hotel-almirante-cartagena-exterior.jpg" alt="sample-image">
@@ -140,7 +179,7 @@
             </section>
         </main>
         <footer class="pt-5">
-            <ul class="decorated-nav nav justify-content-center text-sm-center mx-3">
+            <ul class="decorated-nav nav justify-content-center text-sm-center mx-1">
                 <li class="nav-item">
                   <a class="nav-link" href="#">Home</a>
                 </li>
@@ -172,7 +211,7 @@
                     <a class="nav-link" href="#">linkedin</a>
                 </li>
               </ul>
-              <div class="subscribe-section row py-5 my-3 px-5 flex-sm-column flex-lg-row align-items-center">
+              <div class="subscribe-section row py-5 my-3 px-5 flex-column flex-lg-row align-items-center justify-content-center">
                   <div class="col text-center">
                     <h4>subscribe</h4>
                     <form class="">
@@ -184,17 +223,17 @@
                   </div>
                   <div class="col text-center">
                     <h4>contact</h4>
-                    <p>Lorem ipsum</p>
+                    <p>Lorem ipsum dolor sit <a class="text-danger" href="#">error explicabo non.</a></p>
                   </div>
                   <div class="col text-center">
                     <h4>about</h4>
-                    <p>Lorem ipsum</p>
+                    <p>Lorem ipsum dolor, sit amet <a class="text-danger" href="#">error explicabo non.</a></p>
                   </div>
               </div>
               <nav class="footer-bottom text-grey">
                 <div class="container-fluid">
-                    <div class="d-flex  flex-sm-column flex-lg-row justify-content-between align-items-center p-2 text-secondary">
-                    <div class="">
+                    <div class="d-flex  flex-column flex-lg-row justify-content-between align-items-center p-2 text-secondary">
+                    <div class="social-icons p-2">
                         <i class="bi bi-facebook"></i>
                         <i class="bi bi-twitter"></i>
                         <i class="bi bi-telegram"></i>
@@ -202,11 +241,9 @@
                         <i class="bi bi-linkedin"></i>
                         <i class="bi bi-youtube"></i>
                     </div>
-                    <div class="">
-                        <p>
-                            Copyright &copy; TwoSteps. All rights reserved.
-                        </p>
-                    </div>
+                    <p class="copyright p-2 m-0">
+                        Copyright &copy; TwoSteps. All rights reserved.
+                    </p>
                     </div>
                 </div>
             </nav>
