--- a/details.html
+++ b/details.html
@@ -13,7 +13,7 @@
     <div class="container-fluid px-0">
         <header class="d-flex flex-column flex-lg-row bg-danger align-items-center justify-content-between p-1">
             <h1 class="text-white text-sm-center text-lg-left">
-                <a class="text-white" href="#">
+                <a class="text-white" href="index.html">
                     <i class="bi bi-shop"></i> TwoSteps
                 </a>
             </h1>
@@ -60,25 +60,25 @@
                                     <div class="col-sm-12 col-md-6">HOURS: 24/7</div>
                                 </div>
                                 <div class="row p-3">
-                                    <p class="col text-md-right px-0">
+                                    <p class="col text-md-right p-0 my-0">
                                         <a class="btn bg-primary text-white px-2 py-1" href="#"><i class="bi bi-envelope-fill"></i> Message</a>
                                     </p>
                                 </div>
                                 <div class="row">
-                                    <div class="col-12 d-flex justify-content-between mx-0 contact">
-                                        <div class="">
+                                    <div class="col-12 d-flex flex-column flex-lg-row justify-content-end m-0 px-0 contact">
+                                        <div class="mx-3">
                                             <span><i class="bi bi-telephone-fill"></i> TEL:</span>
-                                            <span class="text-primary">+123456</span>
+                                            <span class="text-primary">+1234567890</span>
                                         </div>
-                                        <div class="">
+                                        <div class="mx-3">
                                             <span><i class="bi bi-globe"></i> WEBSITE:</span>
                                             <span class="text-primary">www.twosteps.com</span>
                                         </div>
-                                        <div class="">
+                                        <div class="mx-3">
                                             <span>STAFF:</span>
                                             <span class="text-primary">10+</span>
                                         </div>
-                                        <div class="">
+                                        <div class="mx-3">
                                             <span>SUPPORT:</span>
                                             <span class="text-primary">YES</span>
                                         </div>
@@ -94,7 +94,7 @@
                 </div>
             </section>
             <section class="map text-center">
-                <h2 class="text-danger"><i class="bi bi-geo-alt-fill"></i> MAP DIRECTIONS</h2>
+                <h4 class="text-danger"><i class="bi bi-geo-alt-fill"></i> MAP DIRECTIONS</h4>
                 <div class="container mt-4">
                     <div class="row justify-content-center">
                         <img class="w-100" src="img/google-maps-multiple-locations.png" alt="">
