--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div class="container-fluid px-0">
         <header class="d-flex flex-column flex-lg-row bg-danger align-items-center justify-content-between p-1">
             <h1 class="text-white text-sm-center text-lg-left">
-                <a class="text-white" href="#">
+                <a class="text-white" href="index.html">
                     <i class="bi bi-shop"></i> TwoSteps
                 </a>
             </h1>
             <nav class="d-flex align-items-center justify-content-center">
                 <div class="px-3">
-                    <a class="d-flex" href="#">
+                    <a class="d-flex" href="results.html#suggestions">
                         <i class="bi bi-eye-fill"></i>
                         <span class="d-none d-lg-inline">Discover</span>
                     </a>
@@ -47,18 +47,18 @@
         <main>
             <section class="hero d-flex flex-column justify-content-center align-items-center position-relative">
                 <div class="dark-cover position-absolute"></div>
-                <div class="mx-3 hero-content">
+                <div class="mx-3 hero-content"  id="banner">
                     <h2 class="headline display-5 text-uppercase">TwoSteps... Discover local businesses near you</h2>
                     <div class="bg-light p-1 rounded opacity-9">
                         <form action="#" class="form p-4">
                             <p class="text-dark text-uppercase p-0 m-0">Search by keyword:</p>
-                            <div class="container px-0">
+                            <div class="container px-0" >
                                 <div class="row p-0 m-0">
                                     <div class="col-12 col-md-9 my-1 px-0">
                                         <input class="form-control p-1" type="search" placeholder="Enter name or location..." aria-label="Search">
                                     </div>
                                     <div class="col-12 col-md-3 mx-0 py-1 px-0">
-                                        <button class="btn bg-danger text-white mx-1 w-100" type="submit">SEARCH</button>
+                                        <a class="btn bg-danger text-white mx-1 w-100" href="results.html">SEARCH</a>
                                     </div>
                                 </div>
                             </div>
@@ -115,7 +115,7 @@
                     <div>
                         <h3>10,000+ registered local businesses</h3>
                         <p>Discover local business near you Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere tempora neque dolore minima facilis alias temporibus delectus possimus iste praesentium reprehenderit eaque dolorem, cum eos, quidem voluptates, nostrum quibusdam quasi.</p>
-                        <button class="text-danger" type="submit">Discover</button>
+                        <a class="btn bg-light text-danger" href="results.html">Discover</a>
                     </div>
                     <div>
                         <img class="rounded-circle" src="./img/google-maps-multiple-locations.png" alt="google-maps-multiple-locations">
@@ -125,7 +125,7 @@
                     <div>
                         <h3 class="text-black">Top 10 most visited places</h3>
                         <p class="text-black">Checkout the most visited places recommended by visitors like you Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, voluptates eveniet voluptas unde est recusandae sunt, ut, beatae aperiam perspiciatis aspernatur iure quia impedit similique molestias. Rerum neque aspernatur reiciendis!</p>
-                        <button type="submit">Suggestion</button>
+                        <a class="btn bg-light" href="results.html#suggestions">Suggestion</a>
                     </div>
                     <div>
                         <img class="rounded-circle" src="./img/five-star-rating.jpeg" alt="five star place">
@@ -143,7 +143,7 @@
             </section>
         </main>
         <footer class="pt-5">
-            <ul class="decorated-nav nav justify-content-center text-sm-center mx-3">
+            <ul class="decorated-nav nav justify-content-center text-sm-center mx-1">
                 <li class="nav-item">
                   <a class="nav-link" href="#">Home</a>
                 </li>
@@ -175,7 +175,7 @@
                     <a class="nav-link" href="#">linkedin</a>
                 </li>
               </ul>
-              <div class="subscribe-section row py-5 my-3 px-5 flex-sm-column flex-lg-row align-items-center">
+              <div class="subscribe-section row py-5 my-3 px-5 flex-column flex-lg-row align-items-center justify-content-center">
                   <div class="col text-center">
                     <h4>subscribe</h4>
                     <form class="">
@@ -187,17 +187,17 @@
                   </div>
                   <div class="col text-center">
                     <h4>contact</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, consequuntur.</p>
+                    <p>Lorem ipsum dolor sit <a class="text-danger" href="#">error explicabo non.</a></p>
                   </div>
                   <div class="col text-center">
                     <h4>about</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus, nam.</p>
+                    <p>Lorem ipsum dolor, sit amet <a class="text-danger" href="#">error explicabo non.</a></p>
                   </div>
               </div>
               <nav class="footer-bottom text-grey">
                 <div class="container-fluid">
-                    <div class="d-flex  flex-sm-column flex-lg-row justify-content-between align-items-center p-2 text-secondary">
-                    <div class="">
+                    <div class="d-flex  flex-column flex-lg-row justify-content-between align-items-center p-2 text-secondary">
+                    <div class="social-icons p-2">
                         <i class="bi bi-facebook"></i>
                         <i class="bi bi-twitter"></i>
                         <i class="bi bi-telegram"></i>
@@ -205,11 +205,9 @@
                         <i class="bi bi-linkedin"></i>
                         <i class="bi bi-youtube"></i>
                     </div>
-                    <div class="">
-                        <p>
-                            Copyright &copy; TwoSteps. All rights reserved.
-                        </p>
-                    </div>
+                    <p class="copyright p-2 m-0">
+                        Copyright &copy; TwoSteps. All rights reserved.
+                    </p>
                     </div>
                 </div>
             </nav>
