Add more images to results folder

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
             <section class="hero d-flex flex-column justify-content-center align-items-center position-relative">
                 <div class="dark-cover position-absolute"></div>
                 <div class="mx-3 hero-content"  id="banner">
-                    <h2 class="headline display-5 text-uppercase">TwoSteps... Discover local businesses near you</h2>
+                    <h2 class="headline display-5 text-uppercase">TwoSteps... Discover Hotels around the world</h2>
                     <div class="bg-light p-1 rounded opacity-9">
                         <form action="#" class="form p-4">
                             <p class="text-dark text-uppercase p-0 m-0">Search by keyword:</p>
                             <div class="container px-0" >
                                 <div class="row p-0 m-0">
                                     <div class="col-12 col-md-9 my-1 px-0">
-                                        <input class="form-control p-1" type="search" placeholder="Enter name or location..." aria-label="Search">
+                                        <input class="form-control p-1" type="search" placeholder="Search by name or category e.g hotel" aria-label="Search">
                                     </div>
                                     <div class="col-12 col-md-3 mx-0 py-1 px-0">
                                         <a class="btn bg-danger text-white mx-1 w-100" href="results.html">SEARCH</a>
@@ -77,7 +77,7 @@
                             </h2>
                             <div>
                                 <h2>1 - Search</h2>
-                                <p>Search for local businesses near you using business name or location Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, dolorem ducimus quos ratione labore repudiandae id necessitatibus ea vitae asperiores!</p>
+                                <p>Search for hotels around the world Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, dolorem ducimus quos ratione labore repudiandae id necessitatibus ea vitae asperiores!</p>
                             </div>
                         </div>
                         <div class="col-sm-12 col-lg-6 text-center">
@@ -86,7 +86,7 @@
                             </h2>
                             <div>
                                 <h2>2 - Discover</h2>
-                                <p>Discover local businesses from our list offering the products and services you're looking for Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat voluptates perferendis obcaecati molestias impedit unde ullam sapiente vel inventore quis.</p>
+                                <p>Discover hotels from our list to top class hotels Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat voluptates perferendis obcaecati molestias impedit unde ullam sapiente vel inventore quis.</p>
                             </div>
                         </div>
                         <div class="col-sm-12 col-lg-6 text-center">
@@ -95,7 +95,7 @@
                             </h2>
                             <div>
                                 <h2>3 - View</h2>
-                                <p>Get to learn more about local businesses near you Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad, voluptate eveniet. Alias quia quas consequuntur quam impedit amet unde enim!</p>
+                                <p>Get to learn more about grand hotels Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad, voluptate eveniet. Alias quia quas consequuntur quam impedit amet unde enim!</p>
                             </div>
                         </div>
                         <div class="col-sm-12 col-lg-6 text-center">
@@ -104,7 +104,7 @@
                             </h2>
                             <div>
                                 <h2>4 - Contact</h2>
-                                <p>Contact owners and managers of local business for more information or inquiries Lorem ipsum dolor sit amet consectetur adipisicing elit. In molestias exercitationem quasi tempora odit cum quaerat corrupti quia voluptate aliquam!</p>
+                                <p>Contact owners and managers of hotels for more information or inquiries Lorem ipsum dolor sit amet consectetur adipisicing elit. In molestias exercitationem quasi tempora odit cum quaerat corrupti quia voluptate aliquam!</p>
                             </div>
                         </div>
                     </div>
@@ -113,8 +113,8 @@
             <section class="value-proposition">
                 <div class="d-flex flex-column-reverse flex-lg-row bg-danger justify-content-between align-items-center text-center text-lg-left p-5">
                     <div>
-                        <h3>10,000+ registered local businesses</h3>
-                        <p>Discover local business near you Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere tempora neque dolore minima facilis alias temporibus delectus possimus iste praesentium reprehenderit eaque dolorem, cum eos, quidem voluptates, nostrum quibusdam quasi.</p>
+                        <h3>10,000+ registered hotels around the world</h3>
+                        <p>Discover hotels near you Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere tempora neque dolore minima facilis alias temporibus delectus possimus iste praesentium reprehenderit eaque dolorem, cum eos, quidem voluptates, nostrum quibusdam quasi.</p>
                         <a class="btn bg-light text-danger" href="results.html">Discover</a>
                     </div>
                     <div>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="d-flex flex-column-reverse flex-lg-row bg-grey justify-content-between align-items-center text-center text-lg-left p-5">
                     <div>
-                        <h3 class="text-black">Top 10 most visited places</h3>
+                        <h3 class="text-black">Top 10 most visited hotels</h3>
                         <p class="text-black">Checkout the most visited places recommended by visitors like you Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, voluptates eveniet voluptas unde est recusandae sunt, ut, beatae aperiam perspiciatis aspernatur iure quia impedit similique molestias. Rerum neque aspernatur reiciendis!</p>
                         <a class="btn bg-light" href="results.html#suggestions">Suggestion</a>
                     </div>
