--- a/results.html
+++ b/results.html
@@ -47,8 +47,8 @@
         <main>
             <section class="filters-section bg-light mt-5 mb-5 p-5">
                 <div class="py-5">
-                    <h2 class="d-none d-md-block text-center">Filter by name, category, country, state:</h2>
-                <p class="d-md-none text-center">Filter by name, category, country, state:</p>
+                    <h2 class="d-none d-md-block text-center">Filter by hotels name or location:</h2>
+                <p class="d-md-none text-center">Filter hotels by name or location:</p>
                 <form class="form container">
                     <div class="row">
                         <div div class="col-sm-12 col-md-2 p-1">
@@ -89,13 +89,52 @@
                 </div>
             </section>
             <section class="search-results bg-lght py-1">
-                <h2 class="d-none d-md-block p-2 text-center">Search result found 7 businesses:</h2>
-                <p class="d-md-none p-2 text-center">Search result found 7 businesses:</p>
+                <h2 class="d-none d-md-block p-2 text-center">Search result found 7 hotels:</h2>
+                <p class="d-md-none p-2 text-center">Search result found 7 hotels:</p>
                 <div class="business-list container" id="suggestions">
                     <div class="row">
                         <div class="col-sm-12 col-md-6 col-lg-4">
                             <div class="biz-card p-0 border m-2 rounded shadow">
-                                <img class="img-fluid w-100 rounded" src="img/hotel-almirante-cartagena-exterior.jpg" alt="sample-image">
+                                <img class="img-fluid w-100 rounded" src="img/results/hotel-2.jpeg" alt="sample-image">
+                                <div class="caption p-2">
+                                    <h5 class="m-0">Ishia Hotels</h5>
+                                    <p class="m-0">Campania, Napoli</p>
+                                    <p class="m-0">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, doloremque!</p>
+                                    <p class="text-center p-0 my-1">
+                                        <a href="details.html" class="text-primary">View more details</a>
+                                    </p>
+                                </div> <!-- End of biz-card -->
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-6 col-lg-4">
+                            <div class="biz-card p-0 border m-2 rounded shadow">
+                                <img class="img-fluid w-100 rounded" src="img/results/hotel-3.jpg" alt="sample-image">
+                                <div class="caption p-2">
+                                    <h5 class="m-0">Sorrento Italia</h5>
+                                    <p class="m-0">Italy</p>
+                                    <p class="m-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, mollitia?</p>
+                                    <p class="text-center p-0 my-1">
+                                        <a href="details.html" class="text-primary">View more details</a>
+                                    </p>
+                                </div> <!-- End of biz-card -->
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-6 col-lg-4">
+                            <div class="biz-card p-0 border m-2 rounded shadow">
+                                <img class="img-fluid w-100 rounded" src="img/results/hotel-4.jpeg" alt="sample-image">
+                                <div class="caption p-2">
+                                    <h5 class="m-0">Marina Bay Sands</h5>
+                                    <p class="m-0">Singapore</p>
+                                    <p class="m-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, a?</p>
+                                    <p class="text-center p-0 my-1">
+                                        <a href="details.html" class="text-primary">View more details</a>
+                                    </p>
+                                </div> <!-- End of biz-card -->
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-6 col-lg-4">
+                            <div class="biz-card p-0 border m-2 rounded shadow">
+                                <img class="img-fluid w-100 rounded" src="img/results/hotel-5.jpg" alt="sample-image">
                                 <div class="caption p-2">
                                     <h5 class="m-0">Name</h5>
                                     <p class="m-0">Location</p>
@@ -108,7 +147,7 @@
                         </div>
                         <div class="col-sm-12 col-md-6 col-lg-4">
                             <div class="biz-card p-0 border m-2 rounded shadow">
-                                <img class="img-fluid w-100 rounded" src="img/hotel-almirante-cartagena-exterior.jpg" alt="sample-image">
+                                <img class="img-fluid w-100 rounded" src="img/results/hotel-6.jpeg" alt="sample-image">
                                 <div class="caption p-2">
                                     <h5 class="m-0">Name</h5>
                                     <p class="m-0">Location</p>
@@ -134,33 +173,7 @@
                         </div>
                         <div class="col-sm-12 col-md-6 col-lg-4">
                             <div class="biz-card p-0 border m-2 rounded shadow">
-                                <img class="img-fluid w-100 rounded" src="img/hotel-almirante-cartagena-exterior.jpg" alt="sample-image">
-                                <div class="caption p-2">
-                                    <h5 class="m-0">Name</h5>
-                                    <p class="m-0">Location</p>
-                                    <p class="m-0">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, doloremque!</p>
-                                    <p class="text-center p-0 my-1">
-                                        <a href="details.html" class="text-primary">View more details</a>
-                                    </p>
-                                </div> <!-- End of biz-card -->
-                            </div>
-                        </div>
-                        <div class="col-sm-12 col-md-6 col-lg-4">
-                            <div class="biz-card p-0 border m-2 rounded shadow">
-                                <img class="img-fluid w-100 rounded" src="img/hotel-almirante-cartagena-exterior.jpg" alt="sample-image">
-                                <div class="caption p-2">
-                                    <h5 class="m-0">Name</h5>
-                                    <p class="m-0">Location</p>
-                                    <p class="m-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, mollitia?</p>
-                                    <p class="text-center p-0 my-1">
-                                        <a href="details.html" class="text-primary">View more details</a>
-                                    </p>
-                                </div> <!-- End of biz-card -->
-                            </div>
-                        </div>
-                        <div class="col-sm-12 col-md-6 col-lg-4">
-                            <div class="biz-card p-0 border m-2 rounded shadow">
-                                <img class="img-fluid w-100 rounded" src="img/hotel-almirante-cartagena-exterior.jpg" alt="sample-image">
+                                <img class="img-fluid w-100 rounded" src="img/results/hotel-7.jpeg" alt="sample-image">
                                 <div class="caption p-2">
                                     <h5 class="m-0">Name</h5>
                                     <p class="m-0">Location</p>
@@ -171,7 +184,19 @@
                                 </div> <!-- End of biz-card -->
                             </div>
                         </div>
-                    </div>
+                        <div class="col-sm-12 col-md-6 col-lg-4">
+                            <div class="biz-card p-0 border m-2 rounded shadow">
+                                <img class="img-fluid w-100 rounded" src="img/results/hotel-8.jpeg" alt="sample-image">
+                                <div class="caption p-2">
+                                    <h5 class="m-0">Name</h5>
+                                    <p class="m-0">Location</p>
+                                    <p class="m-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, a?</p>
+                                    <p class="text-center p-0 my-1">
+                                        <a href="details.html" class="text-primary">View more details</a>
+                                    </p>
+                                </div> <!-- End of biz-card -->
+                            </div>
+                        </div>
                 </div>
                 <div class="d-flex justify-content-center align-items-center mx-5 p-3">
                     <a href="#" class="text-primary">Show More...</a>
