Make subscription form-control responsive

--- a/details.html
+++ b/details.html
@@ -19,7 +19,7 @@
             </h1>
             <nav class="d-flex align-items-center justify-content-center">
                 <div class="px-3">
-                    <a class="d-flex" href="#">
+                    <a class="d-flex" href="results.html#suggestions">
                         <i class="bi bi-eye-fill"></i>
                         <span class="d-none d-xl-inline">Discover</span>
                     </a>
@@ -27,19 +27,19 @@
                 <div class="px-3">
                     <a class="d-flex" href="#">
                         <i class="bi bi-person-circle"></i>
-                        <span class="d-none d-lg-inline">About</span>
+                        <span class="d-none d-xl-inline">About</span>
                     </a>
                 </div>
                 <div class="px-3">
                     <a class="d-flex" href="#">
                         <i class="bi bi-chat-left-text-fill"></i>
-                        <span class="d-none d-lg-inline">Blog</span>
+                        <span class="d-none d-xl-inline">Blog</span>
                     </a>
                 </div>
                 <div class="px-3">
                     <a class="d-flex" href="#">
                         <i class="bi bi-check-circle-fill"></i>
-                        <span class="d-none d-lg-inline">Register</span>
+                        <span class="d-none d-xl-inline">Register</span>
                     </a>
                 </div>
             </nav>
@@ -139,11 +139,17 @@
                   <div class="col text-center">
                     <h4>subscribe</h4>
                     <form class="">
-                      <div class="input-group mb-3">
-                          <input type="email" class="form-control btn-outline-secondary" placeholder="username@example.com" aria-label="Recipient's username" aria-describedby="button-addon2">
-                          <button class="btn mx-1 bg-dark text-white bg-dark" type="button" id="button-addon2">Send</button>
+                        <div class="container m-0 p-2">
+                            <div class="row">
+                                <div class="col-12 col-md-8 p-1">
+                                  <input type="email" class="form-control btn-outline-secondary bg-dark" placeholder="username@example.com" aria-label="Recipient's username" aria-describedby="button-addon2">
+                                </div>
+                                <div class="col-12 col-md-4 p-1">
+                                  <button class="btn bg-dark text-white bg-dark w-100" type="button" id="button-addon2">Send</button>
+                                </div>
+                            </div>
                         </div>
-                    </form>
+                      </form>
                   </div>
                   <div class="col text-center">
                     <h4>contact</h4>
