--- a/results.html
+++ b/results.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container-fluid px-0">
-        <header class="d-flex flex-column flex-lg-row bg-danger align-items-center justify-content-between p-1">
+        <header class="d-flex flex-column flex-md-row bg-danger align-items-center justify-content-between p-1">
             <h1 class="text-white text-sm-center text-lg-left">
                 <a class="text-white" href="index.html">
                     <i class="bi bi-shop"></i> TwoSteps
@@ -21,25 +21,25 @@
                 <div class="px-3">
                     <a class="d-flex" href="results.html#suggestions">
                         <i class="bi bi-eye-fill"></i>
-                        <span class="d-none d-xl-inline">Discover</span>
+                        <span class="d-none d-lg-inline">Discover</span>
                     </a>
                 </div>
                 <div class="px-3">
                     <a class="d-flex" href="#">
                         <i class="bi bi-person-circle"></i>
-                        <span class="d-none d-xl-inline">About</span>
+                        <span class="d-none d-lg-inline">About</span>
                     </a>
                 </div>
                 <div class="px-3">
                     <a class="d-flex" href="#">
                         <i class="bi bi-chat-left-text-fill"></i>
-                        <span class="d-none d-xl-inline">Blog</span>
+                        <span class="d-none d-lg-inline">Blog</span>
                     </a>
                 </div>
                 <div class="px-3">
                     <a class="d-flex" href="#">
                         <i class="bi bi-check-circle-fill"></i>
-                        <span class="d-none d-xl-inline">Register</span>
+                        <span class="d-none d-lg-inline">Register</span>
                     </a>
                 </div>
             </nav>
