Add cropped screenshots and fix linters errors

--- a/index.html
+++ b/index.html
@@ -72,36 +72,36 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12 col-lg-6 text-center">
-                            <h2 class="display-3">
+                            <span class="display-3">
                                 <i class="bi bi-search"></i>
-                            </h2>
+                            </span>
                             <div>
                                 <h2>1 - Search</h2>
                                 <p>Search for hotels around the world Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, dolorem ducimus quos ratione labore repudiandae id necessitatibus ea vitae asperiores!</p>
                             </div>
                         </div>
                         <div class="col-sm-12 col-lg-6 text-center">
-                            <h2 class="display-3">
+                            <span class="display-3">
                                 <i class="bi bi-geo-alt-fill"></i>
-                            </h2>
+                            </span>
                             <div>
                                 <h2>2 - Discover</h2>
                                 <p>Discover hotels from our list to top class hotels Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat voluptates perferendis obcaecati molestias impedit unde ullam sapiente vel inventore quis.</p>
                             </div>
                         </div>
                         <div class="col-sm-12 col-lg-6 text-center">
-                            <h2 class="display-3">
+                            <span class="display-3">
                                 <i class="bi bi-info-circle-fill"></i>
-                            </h2>
+                            </span>
                             <div>
                                 <h2>3 - View</h2>
                                 <p>Get to learn more about grand hotels Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad, voluptate eveniet. Alias quia quas consequuntur quam impedit amet unde enim!</p>
                             </div>
                         </div>
                         <div class="col-sm-12 col-lg-6 text-center">
-                            <h2 class="display-3">
+                            <span class="display-3">
                                 <i class="bi bi-telephone-outbound-fill"></i>
-                            </h2>
+                            </span>
                             <div>
                                 <h2>4 - Contact</h2>
                                 <p>Contact owners and managers of hotels for more information or inquiries Lorem ipsum dolor sit amet consectetur adipisicing elit. In molestias exercitationem quasi tempora odit cum quaerat corrupti quia voluptate aliquam!</p>
