--- a/results.html
+++ b/results.html
@@ -48,44 +48,44 @@
             <section class="filters-section bg-light mt-5 mb-5 p-5">
                 <div class="py-5">
                     <h2 class="d-none d-md-block text-center">Filter by hotels name or location:</h2>
-                <p class="d-md-none text-center">Filter hotels by name or location:</p>
-                <form class="form container">
-                    <div class="row">
-                        <div div class="col-sm-12 col-md-2 p-1">
-                            <input type="text" class="form-control" id="autoSizingInput" placeholder="Name">
+                    <p class="d-md-none text-center">Filter hotels by name or location:</p>
+                    <form class="form container">
+                        <div class="row">
+                            <div class="col-sm-12 col-md-2 p-1">
+                                <input type="text" class="form-control" id="autoSizingInput1" placeholder="Name">
+                            </div>
+                            <div class="col-sm-12 col-md-2 p-1">
+                                <select class="form-select form-control" id="autoSizingSelect2">
+                                    <option selected>Category</option>
+                                    <option value="1">One</option>
+                                    <option value="2">Two</option>
+                                    <option value="3">Three</option>
+                                </select>
+                            </div>
+                            <div class="col-sm-12 col-md-2 p-1">
+                                <select class="form-select form-control" id="autoSizingSelect3">
+                                    <option selected>Country</option>
+                                    <option value="1">One</option>
+                                    <option value="2">Two</option>
+                                    <option value="3">Three</option>
+                                </select>
+                            </div>
+                            <div class="col-sm-12 col-md-2 p-1">
+                                <select class="form-select form-control" id="autoSizingSelect4">
+                                    <option selected>State/City</option>
+                                    <option value="1">One</option>
+                                    <option value="2">Two</option>
+                                    <option value="3">Three</option>
+                                </select>
+                            </div>
+                            <div class="col-sm-12 col-md-2 p-1">
+                                <button type="submit" class="btn btn-primary w-100">Search</button>
+                            </div>
+                            <div class="col-sm-12 col-md-2 p-1">
+                                <button type="submit" class="btn btn-warning w-100">Clear</button>
+                            </div>
                         </div>
-                        <div div class="col-sm-12 col-md-2 p-1">
-                            <select class="form-select form-control" id="autoSizingSelect">
-                            <option selected>Category</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
-                            </select>
-                        </div>
-                        <div div class="col-sm-12 col-md-2 p-1">
-                            <select class="form-select form-control" id="autoSizingSelect">
-                            <option selected>Country</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
-                            </select>
-                        </div>
-                        <div div class="col-sm-12 col-md-2 p-1">
-                            <select class="form-select form-control" id="autoSizingSelect">
-                            <option selected>State/City</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
-                            </select>
-                        </div>
-                        <div div class="col-sm-12 col-md-2 p-1">
-                            <button type="submit" class="btn btn-primary w-100">Search</button>
-                        </div>
-                        <div div class="col-sm-12 col-md-2 p-1">
-                            <button type="submit" class="btn btn-warning w-100">Clear</button>
-                        </div>
-                    </div>
-                </form>
+                    </form>
                 </div>
             </section>
             <section class="search-results bg-lght py-1">
@@ -197,6 +197,7 @@
                                 </div> <!-- End of biz-card -->
                             </div>
                         </div>
+                    </div>
                 </div>
                 <div class="d-flex justify-content-center align-items-center mx-5 p-3">
                     <a href="#" class="text-primary">Show More...</a>
